media coverage spacing issues resolved

--- a/css/custom.css
+++ b/css/custom.css
@@ -455,4 +455,15 @@ input.contact[type=text]{
         width: 360px;
     }
 
+.btn-xlarge {
+    padding: 18px 50px;
+    font-size: 22px; //change this to your desired size
+    line-height: normal;
+    -webkit-border-radius: 0px;
+       -moz-border-radius: 0px;
+            border-radius: 0px;
+}
+
+
+
 
